assets/css/style.css
    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
        
}

body {
    color: white;
    font-family: 'Roboto', sans-serif;
}

.navbar {
    background-color: #0D1E50;
}

.navbar a {
    font-size: 20px;
    cursor: pointer;
}


.navbar .links a {
    color: white;
    margin-right: 35px;
    text-decoration: none;
    transition: color 0.4s;
}

.navbar .links a:hover {
    color: #f6c03f;
}

.application {
    position: relative;
}


.content-row {
    min-height: 635px;
    background-color: #ffffff42;
}

.left-pane {
    background-color: #e8e5e5;
    color: black;
    position: relative;
}

.sidebar {
    position: absolute;
    background-color: white;
    width: 100%;
    height: 100%;
    z-index: 10;
    top: 0;
    left: -100%;
    transition: 0.4s;
    color: black;
}

.sidebar a {
    font-size: 35px;
    position: absolute;
    right: 15px;
    top: 0;
}

.show-sidebar {
    left: 0;
}

.right-pane{
    background: url("../images/2021-11-15_22-22-04.png")
}

.footer-row {
    min-height: 55px;
    background-color: #030202;
}

.footer-row a {
    color: white;
    font-size: 25px;
    transition: color 0.4s;
}

.footer-row a:hover {
    color: #e94234
}

.icons a {
    margin-right: 35px;
}

.hamburger {
    font-size: 28px;
}


@media screen and (min-width: 750px) {
 .hamburger {
     display: none;
 }
 .nav-resp {
     display: flex;
     flex-direction: row;
 }
 .closing {
     display: none;
 }
 
}

@media screen and (max-width: 749px) {
    .nav-resp {
        display: flex;
        text-align: center;
        flex-direction: column;
        background-color: black;
        position: absolute;
        top: -277px;
        left: 0;
        width: 100%;
        transition: 0.4s;
    }
    .nav-resp a {
        margin-top: 15px;
        margin-bottom: 25px;
    }
    .show-topbar {
        top: 0;
        transition: 0.4s;
    }
}





/* background-color: #4b547a66; */

